[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-processing-and-plotting"
version = "0.1.0"
description = "Exercise 3.2 solution: parse Gaussian outputs, plot PES, and estimate vibrational frequencies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ex2-surface = "data_processing_plotting.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

